# ros-task

./: README.md
docker/: sim.Dockerfile
scripts/deploy/: app.sh  base.sh  devel.sh  start.sh  stop.sh
scripts/setup/: workspace.sh
workspace/limo_control/: CMakeLists.txt  package.xml
workspace/limo_control/include/: limo_controller_node.hpp  unicycle_model.hpp
workspace/limo_control/launch/: limo_controller_sim.launch.py
workspace/limo_control/src/: limo_controller_node.cpp  unicycle_model.cpp
workspace/limo_simulation/: CMakeLists.txt  package.xml
workspace/limo_simulation/launch/: limo.launch.py
workspace/limo_simulation/meshes/: limo_base_decimated.dae
workspace/limo_simulation/urdf/: limo_four_diff.gazebo  limo_four_diff.xacro  limo_xacro.xacro
workspace/limo_simulation/worlds/: empty.sdf
