<?xml version="1.0"?>
<package format="3">
    <name>limo_control</name>
    <version>1.0.0</version>
    <description>For testing out control algorithms on the limo bot</description>

    <maintainer email="praneeth.pep@gmail.com">KVK Praneeth</maintainer>
    <license>MIT?</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>